--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Learning about variables</h1>
+  <ol id="output"></ol>
     <script src="js/index.js"></script>
 </body>
 </html>
